--- a/_layouts/recent.html
+++ b/_layouts/recent.html
@@ -11,11 +11,11 @@
     <h2 class="subtitle">
         <img class="subtitle-logo" src="{{ site.url }}/img/owl-logo.png" />
         Blog of Wharton
-        <a class="title-img" href="{{ site.url }}/feed.xml" title="RSS of Wenli Zhang" target="_blank" onclick="_gaq.push(['_trackEvent', 'ToRss', 'AllRss', window.location.pathname]);">
+        <a class="title-img" href="{{ site.url }}/feed.xml" title="RSS" target="_blank" onclick="_gaq.push(['_trackEvent', 'ToRss', 'AllRss', window.location.pathname]);">
             <img src="{{ site.url }}/img/rss-green.png" />
         </a>
     </h2>
-    <div class="pageTitle center">羡辙杂俎</div>
+    <div class="pageTitle center">望花动</div>
     
     {% include aboutMe.html %}
     
