--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
     {% if page.series %}
         : {{ page.series }}
     {% endif %}
- - 羡辙杂俎</title>
+ - 望花动</title>
 
 
 {% assign isZn = false %}
@@ -43,7 +43,7 @@
 
 
 
-    {% include license.html %}
+   <!-- {% include license.html %} -->
 
 
 
@@ -150,4 +150,4 @@
 <div class="rotLeft rotBottom pageBack"></div>
 <div class="rotRight rotBottom pageBack"></div>
 
-{% include footer.html %}
+<!--{% include footer.html %}-->
