--- a/_includes/license.html
+++ b/_includes/license.html
@@ -3,11 +3,11 @@
         <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">
             <img alt="Creative Commons License" style="border-width:0" src="{{ site.url }}/img/cc.png" />
         </a>
-        <div><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Every blog post in this site</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://zhangwenli.com" property="cc:attributionName" rel="cc:attributionURL">Wenli Zhang</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">CC 3.0 License</a>, based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://github.com/ovilia/blog" rel="dct:source">Github</a>. You can see the source code of this blog site at <a href="https://github.com/Ovilia/blog/tree/gh-pages" target="_blank">github.com/Ovilia/blog</a>.</div>
+        <div><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">I haven't been developed for many many years, I just focus on IT tech.s such as GPFS/Openstack/Nutanix/System x/Storages and so on. so the blog style in this site</span> is copy from <a xmlns:cc="http://creativecommons.org/ns#" href="http://zhangwenli.com" property="cc:attributionName" rel="cc:attributionURL">Wenli Zhang,seems a very smart litter girl,well, i hate time..</a> ,it is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">CC 3.0 License</a>, based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://github.com/ovilia/blog" rel="dct:source">Github</a>. You can see the source code of this blog site at <a href="https://github.com/Ovilia/blog/tree/gh-pages" target="_blank">github.com/Ovilia/blog</a>.</div>
     </div>
-    <div class="follow-me">
+ <!--   <div class="follow-me">
         <div class="follow-me-txt">Follow <strong>Wenli Zhang</strong> at</div>
         {% include follow.html %}
-    </div>
+    </div> -->
     <div style="clear: both"></div>
 </div>
