--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -8,7 +8,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     setTimeout(function() {
-        var disqus_shortname = 'whart';
+        var disqus_shortname = 'wharton';
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
             dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
