--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         <meta name="description" content="{{ site.description }}" />
         <meta name="viewport" content="width=100%, initial-scale=1" />
 
-        <link rel="shortcut icon" href="{{ site.filePath }}/owl.ico" />
+        <link rel="shortcut icon" href="{{ site.filePath }}/whd.ico" />
         <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/default.min.css" />
     </head>
     
