--- a/_includes/music.html
+++ b/_includes/music.html
@@ -2,6 +2,6 @@
     <a id="music-control" href="javascript:;" onclick="toggleMusicPanel()"></a>
     <div id="music-content">
         <!-- use lazy loading -->
-        <!--iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="http://music.163.com/#/share/252269821/243433172&auto=0&height=430"></iframe-->
+        <!--iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="http://music.163.com/#/playlist?id=315724329"></iframe-->
     </div>
 </div>
