--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,8 +68,7 @@
     {% endif %}
     <hr />
     
-    <!--<p class="no-indent"><a href="{{ site.url }}/tip/" onclick="_gaq.push(['_trackEvent', 'ToTip', 'InPost', window.location.pathname]);">觉得博文很赞？来打赏一下我吧！——送羡辙一本书，让她写出更棒的作品！:heart_eyes: </a></p>
--->    
+    <!--<p class="no-indent"><a href="{{ site.url }}/tip/" onclick="_gaq.push(['_trackEvent', 'ToTip', 'InPost', window.location.pathname]);">觉得博文很赞？来打赏一下我吧！——送羡辙一本书，让她写出更棒的作品！:heart_eyes: </a></p>-->    
     
 
     <blockquote class="relatedPosts">
