--- a/_includes/aboutMe.html
+++ b/_includes/aboutMe.html
@@ -1,16 +1,11 @@
 <div class="center">
-    <!--<a class="button" href="{{ site.url }}" onclick="_gaq.push(['_trackEvent', 'ToBlog', 'InNav', window.location.pathname]);">Blog</a>-->
-    <!--<a class="button" href="http://zhangwenli.com/cv" target="_blank" onclick="_gaq.push(['_trackEvent', 'ToCv', 'InNav', window.location.pathname]);">CV</a>-->
-    <!-- <a class="button" href="http://zhangwenli.com/#ovilia-home" onclick="_gaq.push(['_trackEvent', 'ToHome', 'InNav', window.location.pathname]);">About Me</a> -->
-    <!--a class="button" href="http://zhangwenli.com/#projects" onclick="_gaq.push(['_trackEvent', 'ToProject', 'InNav', window.location.pathname]);">Projects</a-->
+    
     <a class="button" href="mailto:whdqqq@hotmail.com" target="_blank" onclick="_gaq.push(['_trackEvent', 'ToEmail', 'InNav', window.location.pathname]);">Email Me</a>
-    <!--<a class="button" href="{{ site.url }}/meta" target="_blank" onclick="_gaq.push(['_trackEvent', 'ToSiteMap', 'InNav', window.location.pathname]);">Site Map</a>-->
+    
 </div>
 
-<!--<p><strong>羡辙</strong>，字<strong>子免</strong>，号<strong>灵石笠翁</strong>。<a href="{{ site.url }}/2015/04/29/new-name/" onclick="_gaq.push(['_trackEvent', 'ToPost', 'InRecent', 'AboutMe']);">（求解释）</a></p>
-<p>微信公众号羡辙部落格（xianzheblog）提供本站高质量博客推送。羡辙正在喜马拉雅 FM 制作有声电子书，日本作家的微型小说<a href="http://www.ximalaya.com/19038439/album/3679324" target="_blank"></a>，</p>-->
 
-<p>I'm <em>Wharton</em> and this blog is concerned about <em>IT tech. and related project delivery</em>, book reviews and other interesting topics. Please feel free to <a href="#comments">leave a comment</a> or contact me by <a href="mailto:whdqqq@hotmail.com?subject=Interested+In+Your+Blog+Posts" target="_blank">email</a> if you have any thought.</p>
+<p>I'm <em>Wharton</em> and this blog is concerned about <em>IT tech. and related project delivery</em>, and some whatever.. Feel free to <a href="#comments">leave a comment</a> or by <a href="mailto:whdqqq@hotmail.com?subject=Interested+In+Your+Blog+Posts" target="_blank">email</a> if you have any thought.</p>
 
 {% include license.html %}
 
